--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 height: 300,
                 physics: {
                    default: 'arcade',
-                   debug: false }
+                   debug: false 
                 },
                 scene: {
                     preload: preload,
