--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 }
                 else if (cursors.up.isDown)    {
                    nave.setVelocityX(0);
-                   lutB.anims.play('centro', true);
+                   nave.anims.play('centro', true);
                 }
 
             }
