--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                  this.load.image("fundo", "fundo.png");
                  this.load.spritesheet('nave', 'player.png', { frameWidth: 24, frameHeight: 24 });
                  this.load.spritesheet('asteroide', 'asteroid.png', { frameWidth: 64, frameHeight: 64 });
-                this.load.atlas('flares', 'assets/particles/flares.png', 'assets/particles/flares.json');
+                this.load.atlas('flares', 'flares.png', 'flares.json');
             }
             
             function create() {
